Implementing hash-join for JOIN operation